--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 8080
-MONGO_URI=mongodb+srv://shivanshsingh4539:4539@cluster0.aisuejc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://admin:4539@cluster0.vadbikh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET_KEY= herwihreroihgf
 
 
